// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET /members should return 200 without search filters for user id 1 1`] = `
{
  "members": [
    {
      "email": "pekka.hamalainen@example.com",
      "first": "Pekka",
      "lang": "fi",
      "last": "Hämäläinen",
      "memberId": "Pekka1",
      "phoneNumber": "0445678901",
      "roles": [
        "MEMBER",
      ],
    },
    {
      "email": "antti.heikkinen@example.com",
      "first": "Antti",
      "lang": "fi",
      "last": "Heikkinen",
      "memberId": "Antti1",
      "phoneNumber": "0467890123",
      "roles": [
        "INSTRUCTOR",
        "MEMBER",
      ],
    },
    {
      "email": "juho.kolehmainen@iki.fi",
      "first": "Liisa",
      "lang": "fi",
      "last": "Korhonen",
      "memberId": "Liisa1",
      "phoneNumber": "0412345678",
      "roles": [
        "COMMITTEE",
      ],
    },
    {
      "email": "sanna.koskinen@example.com",
      "first": "Sanna",
      "lang": "fi",
      "last": "Koskinen",
      "memberId": "Sanna1",
      "phoneNumber": "0478901234",
      "roles": [
        "COMMITTEE",
      ],
    },
    {
      "email": "examinerfe@mik.com",
      "first": "Exe",
      "lang": "fi",
      "last": "McExaminerface",
      "memberId": "Examiner1",
      "phoneNumber": "3584400012345",
      "roles": [
        "EXAMINER",
      ],
    },
    {
      "email": "jukka.nieminen@example.com",
      "first": "Jukka",
      "lang": "fi",
      "last": "Nieminen",
      "memberId": "Jukka1",
      "phoneNumber": "0423456789",
      "roles": [
        "INSTRUCTOR",
      ],
    },
    {
      "email": "chris.whellams@gmail.com",
      "first": "Matti",
      "lang": "fi",
      "last": "Virtanen",
      "memberId": "Matti1",
      "phoneNumber": "0401234567",
      "roles": [
        "INSTRUCTOR",
        "MEMBER",
      ],
    },
  ],
}
`;

exports[`GET /members should return 200 without search filters for user id 2 1`] = `
{
  "members": [
    {
      "email": "pekka.hamalainen@example.com",
      "first": "Pekka",
      "lang": "fi",
      "last": "Hämäläinen",
      "memberId": "Pekka1",
      "phoneNumber": "0445678901",
      "roles": [
        "ADMIN",
        "MEMBER",
      ],
    },
    {
      "email": "antti.heikkinen@example.com",
      "first": "Antti",
      "lang": "fi",
      "last": "Heikkinen",
      "memberId": "Antti1",
      "phoneNumber": "0467890123",
      "roles": [
        "INSTRUCTOR",
        "MEMBER",
      ],
    },
    {
      "email": "juho.kolehmainen@iki.fi",
      "first": "Liisa",
      "lang": "fi",
      "last": "Korhonen",
      "memberId": "Liisa1",
      "phoneNumber": "0412345678",
      "roles": [
        "ADMIN",
        "COMMITTEE",
        "SMS_PROCESSOR",
      ],
    },
    {
      "email": "sanna.koskinen@example.com",
      "first": "Sanna",
      "lang": "fi",
      "last": "Koskinen",
      "memberId": "Sanna1",
      "phoneNumber": "0478901234",
      "roles": [
        "COMMITTEE",
        "SMS_PROCESSOR",
      ],
    },
    {
      "email": "examinerfe@mik.com",
      "first": "Exe",
      "lang": "fi",
      "last": "McExaminerface",
      "memberId": "Examiner1",
      "phoneNumber": "3584400012345",
      "roles": [
        "EXAMINER",
      ],
    },
    {
      "email": "jukka.nieminen@example.com",
      "first": "Jukka",
      "lang": "fi",
      "last": "Nieminen",
      "memberId": "Jukka1",
      "phoneNumber": "0423456789",
      "roles": [
        "INSTRUCTOR",
      ],
    },
    {
      "email": "chris.whellams@gmail.com",
      "first": "Matti",
      "lang": "fi",
      "last": "Virtanen",
      "memberId": "Matti1",
      "phoneNumber": "0401234567",
      "roles": [
        "FLYING_MEMBER",
        "INSTRUCTOR",
        "MEMBER",
        "SMS_MANAGER",
      ],
    },
  ],
}
`;

exports[`GET /members should search by unapproved roles as an admin 1`] = `
[
  {
    "email": "marja1@gmailgg.com",
    "first": "Marja",
    "lang": "fi",
    "last": "Salminen",
    "memberId": "Marja1",
    "phoneNumber": "0490123456",
    "roles": [],
  },
]
`;

exports[`GET /members/id Get member details as an admin 1`] = `
{
  "autoRenewAnnualMembership": true,
  "autoRenewEquipmentFee": false,
  "billingId": null,
  "canMakeReservations": true,
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "dateOfBirth": null,
  "email": "admin@mik.fi",
  "firstName": "MIK",
  "iceContactName": null,
  "iceContactPhoneNumber": null,
  "imDiscord": null,
  "imFacebookMessenger": null,
  "imSignal": null,
  "imTelegram": null,
  "imViber": null,
  "imWhatsapp": null,
  "isMembershipApproved": false,
  "isMembershipExpired": false,
  "isTrainingProgramPilot": false,
  "lang": "fi",
  "lastName": "Admin",
  "licenceExpiry": null,
  "medicalExpiry": null,
  "memberId": "k1mnimda",
  "memberSince": Any<String>,
  "memberType": "SYSTEM",
  "phoneNumber": null,
  "postcode": null,
  "roles": [
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "Administrator with full access",
      "isPublic": false,
      "name": {
        "en": "Administrator",
        "fi": "Ylläpitäjä",
        "sv": "Administratör",
      },
      "permissions": [
        "member.admin",
        "flightlog.admin",
        "booking.admin",
        "aircraft.admin",
        "access_codes.admin",
        "invoicing.admin",
        "document.admin",
        "outbox.admin",
      ],
      "roleId": "ADMIN",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
  ],
  "streetAddress": null,
  "townCity": null,
  "updatedAt": Any<String>,
  "updatedBy": "k1mnimda",
}
`;

exports[`GET /members/me should return 200 with valid token for user 1`] = `
{
  "autoRenewAnnualMembership": true,
  "autoRenewEquipmentFee": false,
  "billingId": "123",
  "canMakeReservations": true,
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "dateOfBirth": "1980-01-15",
  "email": "chris.whellams@gmail.com",
  "emailVerifiedAt": Any<String>,
  "firstName": "Matti",
  "iceContactName": "Liisa Virtanen",
  "iceContactPhoneNumber": "0407654321",
  "imDiscord": null,
  "imFacebookMessenger": null,
  "imSignal": null,
  "imTelegram": null,
  "imViber": null,
  "imWhatsapp": null,
  "isMembershipApproved": true,
  "isMembershipExpired": false,
  "isTrainingProgramPilot": true,
  "lang": "fi",
  "lastName": "Virtanen",
  "licenceExpiry": "2026-03-20",
  "licenceId": "FI.FCL.123456",
  "medicalExpiry": "2026-06-01",
  "memberId": "Matti1",
  "memberSince": Any<String>,
  "memberType": "FLYING",
  "membershipApprovedAt": Any<String>,
  "membershipApprovedBy": "Matti1",
  "phoneNumber": "0401234567",
  "postcode": "00100",
  "roles": [
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "MIK member with additional flying rights",
      "isPublic": false,
      "name": {
        "en": "Flying Member",
        "fi": "Lento-oikeus",
        "sv": "Flygmedlem",
      },
      "permissions": [
        "flightlog.user",
        "booking.user",
        "aircraft.user",
        "access_codes.user",
        "document.user",
      ],
      "roleId": "FLYING_MEMBER",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "Instructor with permissions to manage training",
      "isPublic": true,
      "name": {
        "en": "Instructor",
        "fi": "Lennonopettaja",
        "sv": "Instruktör",
      },
      "permissions": [],
      "roleId": "INSTRUCTOR",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "MIK member with basic access",
      "isPublic": true,
      "name": {
        "en": "Member",
        "fi": "Jäsen",
        "sv": "Medlem",
      },
      "permissions": [
        "member",
        "document.user",
      ],
      "roleId": "MEMBER",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "Safety Manager takes care of processing anonymized occurrences",
      "isPublic": false,
      "name": {
        "en": "Safety Manager",
        "fi": "Turvallisuusvastaava",
        "sv": "Säkerhetsansvarig",
      },
      "permissions": [
        "sms.manager",
      ],
      "roleId": "SMS_MANAGER",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
  ],
  "streetAddress": "Keskuskatu 1",
  "townCity": "Helsinki",
  "updatedAt": Any<String>,
  "updatedBy": Any<String>,
}
`;

exports[`GET /members/me should return 200 with valid token for user 2`] = `
{
  "autoRenewAnnualMembership": true,
  "autoRenewEquipmentFee": false,
  "billingId": null,
  "canMakeReservations": true,
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "dateOfBirth": null,
  "email": "admin@mik.fi",
  "firstName": "MIK",
  "iceContactName": null,
  "iceContactPhoneNumber": null,
  "imDiscord": null,
  "imFacebookMessenger": null,
  "imSignal": null,
  "imTelegram": null,
  "imViber": null,
  "imWhatsapp": null,
  "isMembershipApproved": false,
  "isMembershipExpired": false,
  "isTrainingProgramPilot": false,
  "lang": "fi",
  "lastName": "Admin",
  "licenceExpiry": null,
  "medicalExpiry": null,
  "memberId": "k1mnimda",
  "memberSince": Any<String>,
  "memberType": "SYSTEM",
  "phoneNumber": null,
  "postcode": null,
  "roles": [
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "Administrator with full access",
      "isPublic": false,
      "name": {
        "en": "Administrator",
        "fi": "Ylläpitäjä",
        "sv": "Administratör",
      },
      "permissions": [
        "member.admin",
        "flightlog.admin",
        "booking.admin",
        "aircraft.admin",
        "access_codes.admin",
        "invoicing.admin",
        "document.admin",
        "outbox.admin",
      ],
      "roleId": "ADMIN",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
  ],
  "streetAddress": null,
  "townCity": null,
  "updatedAt": Any<String>,
  "updatedBy": Any<String>,
}
`;

exports[`GET /members/me should return 200 with valid token for user 3`] = `
{
  "autoRenewAnnualMembership": true,
  "autoRenewEquipmentFee": false,
  "billingId": "124",
  "canMakeReservations": false,
  "createdAt": Any<String>,
  "createdBy": "k1mnimda",
  "dateOfBirth": "1985-02-20",
  "email": "juho.kolehmainen@iki.fi",
  "emailVerifiedAt": Any<String>,
  "firstName": "Liisa",
  "iceContactName": "Matti Korhonen",
  "iceContactPhoneNumber": "0418765432",
  "imDiscord": null,
  "imFacebookMessenger": null,
  "imSignal": null,
  "imTelegram": null,
  "imViber": null,
  "imWhatsapp": null,
  "isMembershipApproved": true,
  "isMembershipExpired": false,
  "isTrainingProgramPilot": false,
  "lang": "fi",
  "lastName": "Korhonen",
  "licenceExpiry": "2026-03-20",
  "licenceId": "FI.FCL.123456",
  "medicalExpiry": "2026-06-01",
  "memberId": "Liisa1",
  "memberSince": Any<String>,
  "memberType": "JUNIOR",
  "membershipApprovedAt": Any<String>,
  "membershipApprovedBy": "Matti1",
  "phoneNumber": "0412345678",
  "postcode": "02100",
  "roles": [
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "Administrator with full access",
      "isPublic": false,
      "name": {
        "en": "Administrator",
        "fi": "Ylläpitäjä",
        "sv": "Administratör",
      },
      "permissions": [
        "member.admin",
        "flightlog.admin",
        "booking.admin",
        "aircraft.admin",
        "access_codes.admin",
        "invoicing.admin",
        "document.admin",
        "outbox.admin",
      ],
      "roleId": "ADMIN",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "MIK board member with decision-making authority in the club",
      "isPublic": true,
      "name": {
        "en": "Committee Member",
        "fi": "Hallituksen jäsen",
        "sv": "Styrelsemedlem",
      },
      "permissions": [],
      "roleId": "COMMITTEE",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
    {
      "createdAt": Any<String>,
      "createdBy": "k1mnimda",
      "description": "SMS independent receives new occurrences and anonymizes them",
      "isPublic": false,
      "name": {
        "en": "SMS independent reviewer",
        "fi": "SMS riippumaton tarkastaja",
        "sv": "SMS oberoende granskare",
      },
      "permissions": [
        "sms.processor",
      ],
      "roleId": "SMS_PROCESSOR",
      "updatedAt": Any<String>,
      "updatedBy": "k1mnimda",
    },
  ],
  "streetAddress": "Mannerheimintie 10",
  "townCity": "Espoo",
  "updatedAt": Any<String>,
  "updatedBy": Any<String>,
}
`;

exports[`Membership approval tests Get unapproved members should return list of members awaiting approval 1`] = `
[
  {
    "email": "kaisa.laine@example.com",
    "first": "Kaisa",
    "lang": "fi",
    "last": "Laine",
    "memberId": "Kaisa1",
    "phoneNumber": "0456789012",
    "roles": [
      "ADMIN",
    ],
  },
  {
    "email": "anna.makinen@example.com",
    "first": "Anna",
    "lang": "fi",
    "last": "Mäkinen",
    "memberId": "Anna1",
    "phoneNumber": "0434567890",
    "roles": [
      "COMMITTEE",
    ],
  },
  {
    "email": "niko.ikonen@mik.fi",
    "first": "John",
    "lang": "fi",
    "last": "McDoe",
    "memberId": "John1",
    "phoneNumber": "0401234567",
    "roles": [
      "ADMIN",
    ],
  },
  {
    "email": "marja1@gmailgg.com",
    "first": "Marja",
    "lang": "fi",
    "last": "Salminen",
    "memberId": "Marja1",
    "phoneNumber": "0490123456",
    "roles": [],
  },
  {
    "email": "juha.seppala@example.com",
    "first": "Juha",
    "lang": "fi",
    "last": "Seppälä",
    "memberId": "Juha1",
    "phoneNumber": "0489012345",
    "roles": [
      "MEMBER",
    ],
  },
]
`;
